add tree construction and branching, refactoring

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <body>
 	<canvas id="canvas" width="800" height="800"></canvas>
 	<script src="board.js"></script>
+	<script src="ai.js"></script>
 	<script src="app.js"></script>
 </body>
