--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 	<canvas id="canvas" width="800" height="800"></canvas>
+	<script src="fifo_queue.js"></script>
 	<script src="hash_api.js"></script>
 	<script src="board.js"></script>
 	<script src="ai.js"></script>
