--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<canvas id="canvas" width="800" height="800"></canvas>
 	<script src="fifo_queue.js"></script>
-	<script src="hash_api.js"></script>
+	<script src="hash_map.js"></script>
 	<script src="board.js"></script>
 	<script src="ai.js"></script>
 	<script src="app.js"></script>
