Setup for using 2 different AIs

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 	<script src="hash_map.js"></script>
 	<script src="board.js"></script>
 	<script src="ai.js"></script>
+	<script src="ai2.js"></script>
 	<script src="app.js"></script>
 </body>
