board.js factored out

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 </head>
 <body>
 	<canvas id="canvas" width="800" height="800"></canvas>
+
+	<script src="game_board.js"></script>
+	<script src="default_board.js"></script>
+
+	<!-- TODO: Remove both of these, right?! -->
 	<script src="fifo_queue.js"></script>
 	<script src="hash_map.js"></script>
-	<script src="board.js"></script>
+
 	<script src="ai.js"></script>
 	<script src="app.js"></script>
 </body>
