--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
 
 	<script src="game_board.js"></script>
 	<script src="default_board.js"></script>
-
-	<!-- TODO: Remove both of these, right?! -->
-	<script src="fifo_queue.js"></script>
-	<script src="hash_map.js"></script>
-
+	<script src="fifo_queue.js"></script> <!-- (only used for the non alpha-beta search, probably remove..) -->
 	<script src="ai.js"></script>
 	<script src="app.js"></script>
 </body>
